fix: fixed sticking out padding in header

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -16,6 +16,7 @@ body
   display: flex
   align-items: center
   padding: 0 5%
+  box-sizing: border-box
   margin-bottom: 2vh
 
   #logo
